cmake_minimum_required(VERSION 3.5)
set(PROJECT_NAME_MY server)
project(${PROJECT_NAME_MY} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR ${CMAKE_SOURCE_DIR}/third_party/mysqlx)
set(JSON_BuildTests OFF CACHE INTERNAL "")
include_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/include)
include_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/include/mysqlx)
add_library( mysqlcpp8 SHARED IMPORTED )
set_target_properties( mysqlcpp8 PROPERTIES IMPORTED_LOCATION ${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/libmysqlcppconn8.so.2)
FIND_PACKAGE( Boost 1.74 REQUIRED COMPONENTS thread system coroutine)
set(OPENSSL_USE_STATIC_LIBS TRUE)
find_package(OpenSSL REQUIRED)
add_library(${PROJECT_NAME_MY}_demon Server.h Server.cpp)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/libJson1)
target_link_libraries(${PROJECT_NAME_MY}_demon OpenSSL::Crypto OpenSSL::SSL)
include_directories(${CMAKE_SOURCE_DIR}/third_party/libJson1/include)
target_link_libraries( ${PROJECT_NAME_MY}_demon ${Boost_LIBRARIES} )
target_link_libraries(${PROJECT_NAME_MY}_demon mysqlcpp8)
add_executable(${PROJECT_NAME_MY}_ex main.cpp)
target_link_libraries(${PROJECT_NAME_MY}_ex ${PROJECT_NAME_MY}_demon)
